--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/logo.png" alt="">
+                    <img class="img-responsive" src="img/logo_blue.png" alt="">
                     <div class="intro-text">
                         <h1 class="name">Big Things</h1>
-                        <span class="skills">A development ecosystem to boost your IoT projects!</span>
+                        <span class="skills">A development ecosystem to boost your IoT projects.</span>
                     </div>
                 </div>
             </div>
@@ -86,12 +86,13 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section class="success" id="portfolio">
+    <section class="grey-success" id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Modules</h2>
-                    <hr class="star-primary">
+                    <!--<hr class="star-primary">-->
+                    <li class="h2_divider"></li>
                 </div>
             </div>
             <div class="row">
@@ -155,11 +156,12 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Development Tools</h2>
-                    <hr class="star-primary">
+                    <!--<hr class="star-primary">-->
+                    <li class="h2_divider"></li>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 portfolio-item">
+                <div class="col-sm-3 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -169,7 +171,7 @@
                         <img src="img/portfolio/BCharger.png" class="img-responsive" alt="Cabin">
                     </a>
                 </div>
-                <div class="col-sm-6 portfolio-item">
+                <div class="col-sm-3 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -179,7 +181,7 @@
                         <img src="img/portfolio/BMemory.png" class="img-responsive" alt="Slice of cake">
                     </a>
                 </div>
-                <div class="col-sm-6 portfolio-item">
+                <div class="col-sm-3 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -189,7 +191,7 @@
                         <img src="img/portfolio/BEnvironment.png" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>
-                <div class="col-sm-6 portfolio-item">
+                <div class="col-sm-3 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -202,12 +204,13 @@
             </div>
         </div>
     </section>
-    <section id="portfolio">
+    <section class="grey-success" id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Genius</h2>
-                    <hr class="star-primary">
+                    <!--<hr class="star-primary">-->
+                    <li class="h2_divider"></li>
                 </div>
             </div>
             <div class="row">
@@ -256,12 +259,13 @@
     </section>
 
     <!-- About Section -->
-    <section class="success" id="about">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="star-light">
+                    <!--<hr class="star-light">-->
+                    <li class="h2_divider"></li>
                 </div>
             </div>
             <div class="row">
@@ -275,61 +279,6 @@
                     <a href="#" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Download Theme
                     </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
-                    <hr class="star-primary">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="name">Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="email">Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="phone">Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="message">Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <br>
-                        <div id="success"></div>
-                        <div class="row">
-                            <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Send</button>
-                            </div>
-                        </div>
-                    </form>
                 </div>
             </div>
         </div>
